--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(101, 87, 87);
 }
 
 *, ::before, ::after{
@@ -12,4 +13,9 @@ body {
   margin: 0;
   padding: 0;
   outline: none;
+}
+
+button {
+  background: none;
+  border: none;
 }
