--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -28,5 +28,44 @@
     }
     &__avatar{
         max-width: 30px;
+    } 
+    &__links{
+        margin-left: 20px;
+        .nav__link{
+            text-decoration: none;
+            padding: 5px 10px;
+        }
+        @media screen and (min-width:767.98px){
+              margin-left: 0;
+              visibility: hidden;
+              position: absolute;
+              top: 110%;
+              right: 0;
+              .show &{
+                display: flex;
+                flex-direction: column;
+                visibility: visible;
+                width: 100%;
+                height: 100vh;
+                top: 60px;
+                background-color: #000;
+              }
+              .nav__link{
+                padding: 15px 4%;
+                font-size: 1.2rem;
+              }
+          }
+    }
+    &__actions {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        flex: 1;
+        .nav__action{
+            margin-left: 10px;
+            @media screen and (min-width:768px){
+                margin-left: 20px;
+              }
+        }
     }
 }
