--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -8,6 +8,8 @@
     padding: 12px 4%;
     font-size: 0.9rem;
     color: #fff;
+    background: linear-gradient(to bottom, rgba(74,74,74,0.6) rgba(0,0,0,0));
+    transition: background-color 0.3s ease-in-out;
     a{
         color: #fff;
         text-decoration: none;
@@ -34,8 +36,9 @@
         .nav__link{
             text-decoration: none;
             padding: 5px 10px;
+            transition: background-color 0.3s ease-in-out;
         }
-        @media screen and (min-width:767.98px){
+        @media screen and (min-width:400px) and (max-width:767px) {
               margin-left: 0;
               visibility: hidden;
               position: absolute;
@@ -46,7 +49,7 @@
                 flex-direction: column;
                 visibility: visible;
                 width: 100%;
-                height: 100vh;
+                height: calc(100vh -60px);
                 top: 60px;
                 background-color: #000;
               }
